Fixed global Line spacing (#50)

--- a/assets/global.scss
+++ b/assets/global.scss
@@ -1,3 +1,7 @@
 body {
   font-family: "Alata", sans-serif;
 }
+
+p {
+  line-height: 25px;
+}
